# Automatic-Differentiation-Package

./: .gitignore  LICENSE  README.md  d_ec823d871f03d301___init___py.html  d_ec823d871f03d301_elementaries_py.html  d_ec823d871f03d301_node_py.html  d_ec823d871f03d301_vector_function_py.html  index.html  pyproject.toml  status.json
.github/workflows/: code_coverage.yml  deploy_PyPI.yml  run_tests.yml
autodiff_team29/: __init__.py  elementaries.py  node.py  vector_function.py
docs/: optimization_benchmark.py
docs/docs_htmls/: elementaries.html  index.html  node.html  vector_function.html
examples/: matrix_case.py  scalar_to_scalar.py  vector_of_scalar_functions.py  vector_to_scalar.py
tests/: conftest.py  elementary_test.py  node_test.py  vector_function_test.py
